--- a/DockerFile
+++ b/DockerFile
@@ -17,7 +17,9 @@ COPY settings.gradle .
 RUN chmod +x gradlew
 
 # Build the application
-RUN ./gradlew build
+RUN ./gradlew build && mkdir -p build/libs && cp build/libs/*.jar app.jar
+
+EXPOSE 8080
 
 # Copy the jar file to the container
 COPY build/libs/*.jar app.jar
